[project]
name = "knowledge-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.0.335",
    "numpy>=1.26.2",
    "networkx>=3.2.1",
    "pandas>=2.1.3",
    "pypdf>=3.17.0",
    "pyvis>=0.3.2",
    "seaborn>=0.13.0",
    "unstructured>=0.10.30",
    "uuid>=1.30",
    "yachalk>=0.1.5",
    "pathlib>=1.0.1",
    "notebook >=6.5.4",
    "langchain-community>=0.3.21",
    "transformers>=4.51.1",
    "tensorflow>=2.19.0",
]
